--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
         </nav>
     </header>
     <article>
+
+        <!--Section 1: Title Page-->
+
         <div class="hpimg-1">
             <!-- BG-IMG: https://www.maxpixel.net/Disease-Africa-Sick-Poverty-Young-Face-Sadness-1783794-->
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-11">
                         <div class="textHP1 text-center" id="textEffect">
-                            <h1 class="underline">Help People In Need.</h1>
+                            <h1 class="underline">Help People In Need</h1>
                             <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
                                 <br />
                                 <a href="donate.html" value="donateButtonHP" class="btn btn-primary donateButtonStyleHP">Donate here</a>
@@ -70,13 +73,15 @@
             </div>
         </div>
 
+        <!--Section 2: Poverty Trap-->
+
         <div class="hpimg-4">
             <!-- BG-IMG: https://pxhere.com/en/photo/1053497 -->
             <div class="container-fluid section2-text" id="section2-text">
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <section class="section3" id="textEffect2">
-                            <h2 class="header">The Poverty Trap.</h2>
+                            <h2 class="header">The Poverty Trap</h2>
                             <p class="text2 ">When a country does not have a enough capital, i.e. machinary, tools and buildings, people strive to produce goods and services. Therefore, they economic development and growth decreases and it becomes difficult to gain the
                                 capital that they require. As a result, they get trapped into a poverty cycle. However, you could change lives today by donating! Find more information, <a href="statistics.html">here!</a>
 
@@ -102,12 +107,14 @@
             </div>
         </div>
 
+        <!--Section 3: The Struggle for Food and Health Care-->
+
         <div class="hpimg-2">
             <div class="container-fluid section3-text" id="section3-text">
                 <div class="row" id="textEffect3">
                     <div class="col-sm-12 text-center">
                         <section class="section">
-                            <h2 class="header">The Struggle for Food and Health Care.</h2>
+                            <h2 class="header">The Struggle for Food and Health Care</h2>
                             <p class="text2">In some countries, a single plate of food can even cost up to around 70$ or even about 200$. About 45% children, under the age of five, are caused to pass away, due to malnutrition. In many countries, people live in slums,
                                 ran away, suffer mentally and physically from wars, got affected by natural disasters, etc. <span id="dots1" class="dots">...</span><span id="more1" class="more">So, they do not have much access to nutritions, medications or shelter and require various
                                 kinds of support! For statistics, please click <a href="statistics.html">here!</a>
@@ -134,13 +141,16 @@
                 </div>
             </div>
         </div>
+
+        <!--Section 4: Lowest Economic Outputs-->
+
         <div class="hpimg-3">
             <div class="container-fluid section4-text" id="section4-text">
                 <div class="row">
                     <div class="col-sm-12 mx-auto text-center">
                         <section class="section2" id="textEffect4">
                             <h2 class="headerGDP">
-                                Lowest Economic Outputs.
+                                Lowest Economic Outputs
                             </h2>
                             <p class="textGDP">
                                 The GDP per capital and GDP growth play huge roles in a country's economic status, as they show measurements of a country's standard of living, how prosperous the citizens of a country feel, and how fast a country's economy is growing.
@@ -176,6 +186,7 @@
             </div>
         </div>
 
+        <!--Section 5: Please Donate-->
 
         <div class="hpimg-5">
             <div class="container-fluid">
@@ -190,6 +201,8 @@
             </div>
         </div>
     </article>
+
+
     <aside>
         <div class="social-media-button">
             <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
@@ -198,6 +211,8 @@
             <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
         </div>
     </aside>
+
+
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
@@ -205,7 +220,7 @@
                     <h2>Contact Me</h2>
                     <ul class="footer-list">
                         <li>Phone number: 1234</li>
-                        <li ><a href="contact.html" class="footer-link">Send Me a Message</a></li>
+                        <li><a href="contact.html" class="footer-link">Send Me a Message</a></li>
                     </ul>
                 </div>
                 <div class="col-6 text-center">
@@ -220,14 +235,16 @@
 
         <hr>
 
+        <!--Footer Social Media Icons-->
+
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <ul class="social-media-icons-footer">
-                        <li class="facebook-footer"><a href="facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li class="twitter-footer"><a href="twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li class="youtube-footer"><a href="youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                        <li class="instagram-footer"><a href="instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                        <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
