--- a/map.html
+++ b/map.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>Charity Base: Map</title>
 </head>
@@ -44,10 +45,12 @@
     </header>
 
     <article>
+        <!--Main Header and Description of the Web Page-->
         <div class="text-center">
             <h1>Landmap</h1>
             <h2>Use the map below, in order to have a general overview of what countries require help and find quick informations about them by clicking on the markers.</h2>
         </div>
+        <!--World Map-->
         <div id="map"></div>
     </article>
 
@@ -81,14 +84,16 @@
 
         <hr>
 
+        <!--Footer Social Media Icons-->
+
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <ul class="social-media-icons-footer">
-                        <li class="facebook-footer"><a href="facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li class="twitter-footer"><a href="twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li class="youtube-footer"><a href="youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                        <li class="instagram-footer"><a href="instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                        <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
