--- a/statistics.html
+++ b/statistics.html
@@ -17,7 +17,6 @@
     <header>
         <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
-            <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
             <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
 
             <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
@@ -51,7 +50,9 @@
         </nav>
     </header>
 
-    <article>
+    <!--Main Header-->
+
+    <article id="statistics-article">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
@@ -61,11 +62,12 @@
                 </div>
             </div>
         </div>
+
+        <!--GDP Per Capita Chart-->
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
                     <h2 class="graph-color">Lowest GDP Per Capita In The World (Projected)</h2>
-                    <div id="country-selector"></div>
                     <div id="gdp-per-capita-chart"></div>
                 </div>
             </div>
@@ -84,6 +86,9 @@
                 </div>
             </div>
         </div>
+
+        <!--Gini Coefficient Chart-->
+
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
@@ -104,6 +109,8 @@
                 </div>
             </div>
         </div>
+
+        <!--Unemployment Rate Pie Chart-->
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
@@ -124,10 +131,13 @@
                 </div>
             </div>
         </div>
+
+        <!--Female Unemployent Rates Graph-->
+
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="graph-color">Unemployment Rate Female</h2>
+                    <h2 class="graph-color">Female Unemployment Rate</h2>
                     <div id="unemployment-rate-female"></div>
                 </div>
             </div>
@@ -141,10 +151,13 @@
                 </div>
             </div>
         </div>
+
+        <!--Male Unemployment Rates Graph-->
+
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="graph-color">Unemployment Rate Male</h2>
+                    <h2 class="graph-color">Male Unemployment Rate</h2>
                     <div id="unemployment-rate-male"></div>
                 </div>
             </div>
@@ -158,6 +171,8 @@
                 </div>
             </div>
         </div>
+
+        <!--Total Gender Unemployment Rates-->
 
         <div class="container-fluid chartStyling">
             <div class="row">
@@ -178,6 +193,8 @@
                 </div>
             </div>
         </div>
+
+        <!--Costs of Meals Chart-->
 
         <div class="container-fluid chartStyling">
             <div class="row">
@@ -211,6 +228,7 @@
             <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
         </div>
     </aside>
+
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
@@ -233,14 +251,16 @@
 
         <hr>
 
+        <!--Footer Social Media Icons-->
+
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <ul class="social-media-icons-footer">
-                        <li class="facebook-footer"><a href="facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li class="twitter-footer"><a href="twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li class="youtube-footer"><a href="youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                        <li class="instagram-footer"><a href="instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                        <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
