--- a/donate.html
+++ b/donate.html
@@ -21,7 +21,6 @@
     <header>
         <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
-            <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
             <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
 
             <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
@@ -50,6 +49,9 @@
         </nav>
     </header>
     <article>
+
+        <!--Carousel for Africa and Asia-->
+
         <section>
             <div id="AsiaAfricaCharityCarouselIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -91,9 +93,16 @@
             <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. We do not provide donation services.</p>
         </section>
 
+        <!--Charities for Africa and Asia-->
+
+
         <section id="AsiaAfricaSection">
             <div class="container-fluid">
                 <div class="row">
+
+                    <!--Charities for Asia-->
+
+
                     <div class="col-sm-6">
                         <div class="text-center donatePageTextColor">
                             <h2>Asia:</h2>
@@ -260,7 +269,7 @@
                         </div>
                     </div>
 
-
+                    <!--Charities for Africa-->
 
                     <div class="col-sm-6">
                         <div class="text-center donatePageTextColor">
@@ -423,9 +432,14 @@
             </div>
         </section>
 
+        <!--Calculators for Africa and Asia-->
+
         <section class="calculator">
             <div class="container-fluid">
                 <div class="row">
+
+                    <!--Asia Calculator-->
+
                     <div class="col-sm-6">
                         <div class="col-12 text-center donatePageTextColor">
                             <h3>Calculate Your Donations for Asia</h3>
@@ -492,6 +506,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <!--Africa Calculator-->
 
                     <div class="col-sm-6">
                         <div class="col-12 text-center donatePageTextColor">
@@ -564,6 +580,8 @@
             </div>
         </section>
 
+        <!--Carousel for Europe and South America-->
+
         <section id="SAEuropeSection">
             <div id="SouthAmericaEuropeCarouselIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -599,9 +617,14 @@
             </div>
         </section>
 
+        <!--Charities for Europe and South America-->
+
         <section>
             <div class="container-fluid">
                 <div class="row">
+
+                    <!--Charities for South America-->
+
                     <div class="col-sm-6">
                         <div class="text-center donatePageTextColor">
                             <h2>South America:</h2>
@@ -696,6 +719,8 @@
                         </div>
                     </div>
 
+                    <!--Charities for Europe-->
+
                     <div class="col-sm-6">
                         <div class="text-center donatePageTextColor">
                             <h2>Europe:</h2>
@@ -756,9 +781,14 @@
             </div>
         </section>
 
+        <!--Calculators for Europe and South America-->
+
         <section class="calculator">
             <div class="container-fluid">
                 <div class="row">
+
+                    <!--South America Calculator-->
+
                     <div class="col-sm-6">
                         <div class="col-12 text-center donatePageTextColor">
                             <h3>Calculate Your Donations for South America</h3>
@@ -825,6 +855,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <!--Europe Calculator-->
 
                     <div class="col-sm-6">
                         <div class="col-12 text-center donatePageTextColor">
@@ -897,6 +929,8 @@
             </div>
         </section>
 
+        <!--Carousel for Oceania and North America-->
+
         <section id="NAAusCharities">
             <div id="AustraliaNACharityCarouselIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -926,13 +960,17 @@
             </div>
         </section>
 
+        <!--Charities for Oceania and North America-->
+
         <section id="NAAusCharities">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-6">
+
+                        <!--Charities for North America-->
+
                         <div class="text-center donatePageTextColor">
                             <h2>North America:</h2>
-
                         </div>
                         <div class="container-fluid">
                             <div class="row">
@@ -979,6 +1017,8 @@
                         </div>
                     </div>
 
+                    <!--Charities for Oceania-->
+
                     <div class="col-sm-6">
                         <div class="text-center donatePageTextColor">
                             <h2>Oceania:</h2>
@@ -1018,9 +1058,14 @@
             </div>
         </section>
 
+        <!--Calculators for Oceania and North America-->
+
         <section class="calculator">
             <div class="container-fluid">
                 <div class="row">
+
+                    <!--North America Calculator-->
+
                     <div class="col-sm-6">
                         <div class="col-12 text-center donatePageTextColor">
                             <h3>Calculate Your Donations for North America</h3>
@@ -1087,6 +1132,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <!--Oceania Calculator-->
 
                     <div class="col-sm-6">
                         <div class="col-12 text-center donatePageTextColor">
@@ -1159,6 +1206,8 @@
             </div>
         </section>
 
+        <!--Total Sum Calculator-->
+
         <section>
             <div class="container">
                 <div class="row">
@@ -1180,7 +1229,7 @@
             </div>
         </section>
     </article>
-    
+
     <aside>
         <div class="social-media-button">
             <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
@@ -1210,15 +1259,17 @@
         </div>
 
         <hr>
+        
+        <!--Footer Social Media Icons-->
 
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <ul class="social-media-icons-footer">
-                        <li class="facebook-footer"><a href="facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li class="twitter-footer"><a href="twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li class="youtube-footer"><a href="youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                        <li class="instagram-footer"><a href="instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                        <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
