Changed the responsiveness for the styles on different screen sizes.

--- a/donate.html
+++ b/donate.html
@@ -90,7 +90,7 @@
 
         <section>
             <h1 class="charitiesH1 text-center underline">Charities</h1>
-            <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. We do not provide donation services.</p>
+            <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. I do not provide donation services.</p>
         </section>
 
         <!--Charities for Africa and Asia-->
@@ -1231,13 +1231,15 @@
     </article>
 
     <aside>
-        <div class="social-media-button">
+        <div class="social-media-button d-none d-sm-block">
             <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
             <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
             <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
             <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
         </div>
     </aside>
+
+
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
@@ -1258,19 +1260,21 @@
             </div>
         </div>
 
-        <hr>
-        
-        <!--Footer Social Media Icons-->
+        <div class="d-block d-sm-none">
+            <hr>
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <ul class="social-media-icons-footer">
-                        <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                        <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    </ul>
+            <!--Footer Social Media Icons-->
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <ul class="social-media-icons-footer">
+                            <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                            <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
