--- a/map.html
+++ b/map.html
@@ -48,20 +48,22 @@
         <!--Main Header and Description of the Web Page-->
         <div class="text-center">
             <h1>Landmap</h1>
-            <h2>Use the map below, in order to have a general overview of what countries require help and find quick informations about them by clicking on the markers.</h2>
+            <h2>Use the map below, in order to have a general overview of what countries require help and find quick information about them by clicking on the markers.</h2>
         </div>
         <!--World Map-->
         <div id="map"></div>
     </article>
 
     <aside>
-        <div class="social-media-button">
+        <div class="social-media-button d-none d-sm-block">
             <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
             <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
             <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
             <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
         </div>
     </aside>
+
+
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
@@ -82,24 +84,25 @@
             </div>
         </div>
 
-        <hr>
+        <div class="d-block d-sm-none">
+            <hr>
 
-        <!--Footer Social Media Icons-->
+            <!--Footer Social Media Icons-->
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <ul class="social-media-icons-footer">
-                        <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                        <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    </ul>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <ul class="social-media-icons-footer">
+                            <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                            <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
-
 
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
