--- a/statistics.html
+++ b/statistics.html
@@ -68,14 +68,17 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="graph-color">Lowest GDP Per Capita In The World (Projected)</h2>
-                    <div id="gdp-per-capita-chart"></div>
+                    <div class="d-none d-sm-block" id="gdp-per-capita-chart"></div>
+                    <div class="d-block d-sm-none no-content-BG">
+                        <p>This content is only available on devices with larger sizes.</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <p class="chartText">
+                    <p class="chartText d-none d-sm-block">
                         DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
                     </p>
 
@@ -93,14 +96,17 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="graph-color">Gini Coefficient Chart</h2>
-                    <div id="gini-coefficient-chart"></div>
+                    <div class="d-none d-sm-block" id="gini-coefficient-chart"></div>
+                    <div class="d-block d-sm-none no-content-BG">
+                        <p>This content is only available on devices with larger sizes.</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <p class="chartText">
+                    <p class="chartText d-none d-sm-block">
                         DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
                     </p>
                     <p class="chartText">
@@ -115,14 +121,17 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="graph-color">Unemployment Rate Pie Chart</h2>
-                    <div id="unemployment-rate-pie-chart"></div>
+                    <div class="d-none d-sm-block" id="unemployment-rate-pie-chart"></div>
+                    <div class="d-block d-sm-none no-content-BG">
+                        <p>This content is only available on devices with larger sizes.</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <p class="chartText">
+                    <p class="chartText d-none d-sm-block">
                         DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
                     </p>
                     <p class="chartText">
@@ -138,7 +147,10 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="graph-color">Female Unemployment Rate</h2>
-                    <div id="unemployment-rate-female"></div>
+                    <div class="d-none d-sm-block" id="unemployment-rate-female"></div>
+                    <div class="d-block d-sm-none no-content-BG">
+                        <p>This content is only available on devices with larger sizes.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -158,7 +170,10 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="graph-color">Male Unemployment Rate</h2>
-                    <div id="unemployment-rate-male"></div>
+                    <div class="d-none d-sm-block" id="unemployment-rate-male"></div>
+                    <div class="d-block d-sm-none no-content-BG">
+                        <p>This content is only available on devices with larger sizes.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -178,7 +193,10 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="graph-color">Unemployment Rates Pie Chart</h2>
-                    <div id="gender-unemployment-rate-pie-chart"></div>
+                    <div class="d-none d-sm-block" id="gender-unemployment-rate-pie-chart"></div>
+                    <div class="d-block d-sm-none no-content-BG">
+                        <p>This content is only available on devices with larger sizes.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -200,7 +218,10 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="graph-color">Costs of Food in Various Countries or City.</h2>
-                    <div id="costs-of-meals-chart"></div>
+                    <div class="d-none d-sm-block" id="costs-of-meals-chart"></div>
+                    <div class="d-block d-sm-none no-content-BG">
+                        <p>This content is only available on devices with larger sizes.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -208,7 +229,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <p class="chartText">
+                    <p class="chartText d-none d-sm-block">
                         NG-Nigeria, DRC-Democratic Republic of Congo, HT-Haiti, MZ-Mozambique, YE-Yemen, SO-Somalia, SoP-State of Palestine, BD-Bangladesh, SV-El Salvador, ID-Indonesia, JO-Jordan, NY-New York
                     </p>
                     <p class="chartText">
@@ -221,13 +242,14 @@
     </article>
 
     <aside>
-        <div class="social-media-button">
+        <div class="social-media-button d-none d-sm-block">
             <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
             <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
             <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
             <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
         </div>
     </aside>
+
 
     <footer id="footer">
         <div class="container-fluid">
@@ -249,19 +271,21 @@
             </div>
         </div>
 
-        <hr>
+        <div class="d-block d-sm-none">
+            <hr>
 
-        <!--Footer Social Media Icons-->
+            <!--Footer Social Media Icons-->
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <ul class="social-media-icons-footer">
-                        <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                        <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    </ul>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <ul class="social-media-icons-footer">
+                            <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                            <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
