--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
 
     <aside>
-        <div class="social-media-button">
+        <div class="social-media-button d-none d-sm-block">
             <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
             <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
             <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
@@ -232,20 +232,22 @@
                 </div>
             </div>
         </div>
+        
+        <div class="d-block d-sm-none">
+            <hr>
 
-        <hr>
+            <!--Footer Social Media Icons-->
 
-        <!--Footer Social Media Icons-->
-
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <ul class="social-media-icons-footer">
-                        <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                        <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    </ul>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <ul class="social-media-icons-footer">
+                            <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                            <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
