Made changes in the codes for the dragging effect on the 'Donate' page.

--- a/donate.html
+++ b/donate.html
@@ -95,7 +95,7 @@
 
         <!--Calculator-->
         <section id="calculatorSection">
-            <div class="col-sm-2">
+            <div class="col-sm-2" id="calculatorSectionHeader">
                 <div class="col-12 text-center donatePageTextColor calcTextBG">
                     <h5>Calculate How Much You Would Like to Donate</h5>
                 </div>
