Edited the textbox of contact.html and a new aside button of donate.html.

--- a/contact.html
+++ b/contact.html
@@ -69,18 +69,21 @@
 
                 <div class="row">
                     <div class="forms center-form">
-                        <input type="text" name="name" id="name" placeholder="Name" required />
+                        <label for="name">Name:</label>
+                        <input type="text" name="name" id="name" class="form-control" cols="100" rows=" 5" required />
                     </div>
                 </div>
                 <div class="row">
                     <div class="forms center-form">
-                        <input type="text" name="email" id="email" placeholder="Email Address" required />
+                        <label for="email">Email Address:</label>
+                        <input type="text" name="email" id="email" class="form-control" cols="100" rows=" 5" required />
                     </div>
                 </div>
                 <div class="row">
 
                     <div class="forms center-form">
-                        <textarea name="Message" id="contactMessage" cols="35" rows="10" placeholder="Enter A Message" required></textarea>
+                        <label for="contactMessage">Please Enter A Message Below:</label>
+                        <textarea name="Message" id="contactMessage" class="form-control" cols="100" rows="5" required></textarea>
                     </div>
                 </div>
 
