Edited the draggable calculator of donate.html and the input boxes of contact.html.

--- a/donate.html
+++ b/donate.html
@@ -95,9 +95,9 @@
 
         <!--Calculator-->
         <section id="calculatorSection">
-            <div class="col-sm-2 justify-content-sm-center" id="calculatorSectionHeader">
+            <div class="justify-content-sm-center" id="calculatorSectionHeader">
                 <div class="col-12 text-center donatePageTextColor calcTextBG">
-                    <h5>Calculate How Much You Would Like to Donate</h5>
+                    <h5>Click Here To Move and Calculate How Much You Would Like to Donate</h5>
                 </div>
                 <div class "container">
                     <form>
