Changed the position of the calculator to be fixed.

--- a/donate.html
+++ b/donate.html
@@ -2,29 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+	 crossorigin="anonymous">
 
-    <!--Load hover.css-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
+	<!--Load hover.css-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
 
-    <!--Load CSS File-->
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+	<!--Load CSS File-->
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
-    <title>Charity Base: Donate Page</title>
+	<title>Charity Base: Donate Page</title>
 </head>
 
 <body id="bodyColor">
-    <header>
-        <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
+	<header>
+		<nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
-            <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
+			<a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
 
-            <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
-  
+			<button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
+
             <span class="navbar-toggler-icon"></span></button>
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -94,12 +96,13 @@
         </section>
 
         <!--Calculator-->
-        <section id="calculatorSection">
+        <section id="calculator-wrapper">
+        <div class="calculatorSection">
             <div class="justify-content-sm-center" id="calculatorSectionHeader">
                 <div class="col-12 text-center donatePageTextColor calcTextBG">
                     <h5>Click Here To Move and Calculate How Much You Would Like to Donate</h5>
                 </div>
-                <div class "container">
+                <div class="container">
                     <form>
                         <input type="text" class="screen" />
                     </form>
@@ -162,9 +165,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
         </section>
         <!--Charities for Africa and Asia-->
-
 
         <section id="AsiaAfricaSection">
             <div class="container-fluid">
@@ -893,10 +897,10 @@
 </html>
 
 
-<!-- 
-IMPORTANT SOURCES: 
+<!--
+IMPORTANT SOURCES:
 
-Kyrgyztan information: 
+Kyrgyztan information:
 https://www.sos-childrensvillages.org/where-we-help/asia/kyrgyzstan
 
 DRC information:
