Repositioned some of the texts on the homepage.

--- a/donate.html
+++ b/donate.html
@@ -545,7 +545,7 @@
 
         <!--Charities for Europe and South America-->
 
-        <section>
+        <section id="SAEuropeCharities">
             <div class="container-fluid">
                 <div class="row">
 
@@ -709,7 +709,7 @@
 
         <!--Carousel for Oceania and North America-->
 
-        <section id="NAAusCharities">
+        <section id="NAAusCarousel">
             <div id="AustraliaNACharityCarouselIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#AustraliaNACharityCarouselIndicators" data-slide-to="0" class="active"></li>
